--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,32 @@
+/* work-sans-regular - latin */
+@font-face {
+    font-display: swap;
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 400;
+    src: url('./fonts/work-sans-v19-latin-regular.woff2') format('woff2');
+}
+
+/* work-sans-600 - latin */
+@font-face {
+    font-display: swap;  
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 600;
+    src: url('./fonts/work-sans-v19-latin-600.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;  
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 700;
+    src: url('./fonts/roboto-condensed-v27-latin-700.woff2') format('woff2');
+}
+
+
 body {
     color: red;
+    font-family: 'Roboto Condensed';
+    font-weight: 700;
 }
