update default body style

--- a/assets/style.css
+++ b/assets/style.css
@@ -26,7 +26,6 @@
 
 
 body {
-    color: red;
-    font-family: 'Roboto Condensed';
-    font-weight: 700;
+    font-family: 'Work Sans';
+    font-weight: 400;
 }
