--- a/assets/css/font.css
+++ b/assets/css/font.css
@@ -4,7 +4,7 @@
     font-family: 'Work Sans';
     font-style: normal;
     font-weight: 400;
-    src: url('./fonts/work-sans-v19-latin-regular.woff2') format('woff2');
+    src: url('../fonts/work-sans-v19-latin-regular.woff2') format('woff2');
 }
 
 /* work-sans-600 - latin */
@@ -13,7 +13,7 @@
     font-family: 'Work Sans';
     font-style: normal;
     font-weight: 600;
-    src: url('./fonts/work-sans-v19-latin-600.woff2') format('woff2');
+    src: url('../fonts/work-sans-v19-latin-600.woff2') format('woff2');
 }
 
 @font-face {
@@ -21,11 +21,6 @@
     font-family: 'Roboto Condensed';
     font-style: normal;
     font-weight: 700;
-    src: url('./fonts/roboto-condensed-v27-latin-700.woff2') format('woff2');
+    src: url('../fonts/roboto-condensed-v27-latin-700.woff2') format('woff2');
 }
 
-
-body {
-    font-family: 'Work Sans';
-    font-weight: 400;
-}
