--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,22 @@
+* {
+    box-sizing: border-box; 
+}
+
+html, body, main {
+    height: 100%;
+}
+
 body {
     font-family: 'Work Sans';
     font-weight: 400;
+    color: var(--main-text);
+    background-color: var(--backgrounds);
+}
+
+.main {
+    max-width: 900px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
