add responsive adjustement block on mobile, to avoid big white middle space

--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -1,5 +1,5 @@
 :root {
-    --main-text: #121D14;
-    --secondary-text: #233827;
-    --backgrounds: #B6B58B;
+    --main: #121D14;
+    --secondary: #233827;
+    --background: #B6B58B;
 }
