--- a/js/Components/header/header.css
+++ b/js/Components/header/header.css
@@ -15,7 +15,7 @@
 .header-subtext {
     font-size: 16px;
     font-weight: 400;
-    color: var(--secondary-text);
+    color: var(--secondary);
 }
 
 .header-text {
