--- a/js/Components/cover/cover.css
+++ b/js/Components/cover/cover.css
@@ -3,4 +3,23 @@
     border-radius: 4px 4px 0 0;
     width: 100%;
     height: 100%;
+    animation: scaleanimation 1.1s cubic-bezier(.22,.61,.36,1);;
+    animation-fill-mode: forwards;
+    animation-delay: 0.5s;
+}
+
+.cover-container {
+    animation: showanimation 0.9s cubic-bezier(.86,0,.07,1);
+    animation-fill-mode: forwards;
+    animation-delay: 0.4s;
+}
+
+@keyframes showanimation {
+    from { clip-path: rect(100% 0% 0% 0%); };
+    to { clip-path: rect(100% 0% 0% 100%); };
+}
+
+@keyframes scaleanimation {
+    from { transform: scale(1.3) };
+    to { transform: scale(1) };
 }
