--- a/js/Components/header/header.css
+++ b/js/Components/header/header.css
@@ -1,6 +1,7 @@
 .header-container {
     margin: 0;
     display: flex;
+    visibility: hidden;
     justify-content: space-between;
     padding: 32px 64px 0 64px;
     white-space: nowrap;
