--- a/js/Components/title/title.css
+++ b/js/Components/title/title.css
@@ -1,4 +1,5 @@
 .title {
+    display: none;
     font-size: 128px;
     font-family: Roboto Condensed;
     margin: 0;
@@ -8,6 +9,7 @@
     top: 76px;
     text-wrap: nowrap;
     overflow: hidden;
+    z-index: 10;
 }
 
 @media screen and (width <= 768px) {
