--- a/js/Components/header/header.css
+++ b/js/Components/header/header.css
@@ -23,6 +23,37 @@
     font-weight: 600;
 }
 
+.hb-1 {
+    opacity: 0;
+    animation: fadeIn 0.7s ease-out forwards;
+    animation-delay: 0.6s;
+}
+
+.hb-2 {
+    opacity: 0;
+    animation: fadeIn 0.7s ease-out forwards;
+    animation-delay: 0.7s;
+}
+
+.hb-3 {
+    opacity: 0;
+    animation: fadeIn 0.7s ease-out forwards;
+    animation-delay: 0.8s;
+}
+
+.hb-4 {
+    opacity: 0;
+    animation: fadeIn 0.7s ease-out forwards;
+    animation-delay: 0.9s;
+}
+
+/* Animation */
+@keyframes fadeIn {
+    from { opacity: 0; transform: translateY(10px);  };
+    to { opacity: 1; transform: translateY(0px); };
+}
+
+/* Responsive design */
 @media screen and (width <= 640px) {
     .header-container {
         flex-wrap: wrap;
