fix css animation bug: semicolon is not needed on each 'from' 'to'

--- a/js/Components/header/header.css
+++ b/js/Components/header/header.css
@@ -49,8 +49,8 @@
 
 /* Animation */
 @keyframes fadeIn {
-    from { opacity: 0; transform: translateY(10px);  };
-    to { opacity: 1; transform: translateY(0px); };
+    from { opacity: 0; transform: translateY(10px);  }
+    to { opacity: 1; transform: translateY(0px); }
 }
 
 /* Responsive design */
