--- a/js/Components/backgroundAnimation/backgroundAnimation.css
+++ b/js/Components/backgroundAnimation/backgroundAnimation.css
@@ -10,6 +10,6 @@
 }
 
 @keyframes bganimation {
-    from { transform: scaleX(1) };
-    to { transform: scaleX(0) };
+    from { transform: scaleX(1) }
+    to { transform: scaleX(0) }
 }
