--- a/js/Components/cover/cover.css
+++ b/js/Components/cover/cover.css
@@ -15,11 +15,11 @@
 }
 
 @keyframes showanimation {
-    from { clip-path: rect(100% 0% 0% 0%); };
-    to { clip-path: rect(100% 0% 0% 100%); };
+    from { clip-path: rect(100% 0% 0% 0%); }
+    to { clip-path: rect(100% 0% 0% 100%); }
 }
 
 @keyframes scaleanimation {
-    from { transform: scale(1.3) };
-    to { transform: scale(1) };
+    from { transform: scale(1.3) }
+    to { transform: scale(1) }
 }
